# fluent-rs

./: .gitignore  Cargo.toml
fluent/: Cargo.toml
fluent-bundle/: Cargo.toml  README.md
fluent-bundle/benches/: resolver.rs  resolver_iai.rs
fluent-bundle/examples/: custom_formatter.rs  custom_type.rs  external_arguments.rs  functions.rs  hello.rs  message_reference.rs  selector.rs  simple-app.rs
fluent-bundle/src/: bundle.rs  concurrent.rs  entry.rs  errors.rs  lib.rs  memoizer.rs  message.rs  resource.rs
fluent-bundle/src/resolver/: errors.rs  expression.rs  inline_expression.rs  pattern.rs  scope.rs
fluent-bundle/src/types/: datetime.rs  mod.rs  number.rs  plural.rs
fluent-bundle/tests/: bundle.rs  custom_types.rs  function.rs  optional_value.rs  resolver_fixtures.rs  types_test.rs
fluent-cli/: Cargo.toml
fluent-fallback/: Cargo.toml
fluent-fallback/examples/: simple-fallback.rs
fluent-fallback/src/: bundles.rs  env.rs  errors.rs  generator.rs  lib.rs  types.rs
fluent-fallback/tests/: localization_test.rs
fluent-langneg/: Cargo.toml  README.md
fluent-langneg/src/: accepted_languages.rs  lib.rs
fluent-langneg/src/negotiate/: likely_subtags.rs  mod.rs
fluent-pseudo/: Cargo.toml
fluent-resmgr/: Cargo.toml
fluent-resmgr/examples/: simple-resmgr.rs
fluent-resmgr/src/: resource_manager.rs
fluent-resmgr/tests/: localization_test.rs
fluent-syntax/: Cargo.toml
fluent-syntax/benches/: parser.rs  parser_iai.rs
fluent-syntax/tests/: serializer_fixtures.rs  unicode.rs
fluent-testing/: Cargo.toml
fluent-testing/examples/: js.rs
fluent-testing/src/scenarios/: missing_optional_all_locales.rs  missing_optional_one_locale.rs  structs.rs
fluent/src/: lib.rs
fluent/tests/: macro.rs
intl-memoizer/: Cargo.toml  README.md
intl-memoizer/examples/: numberformat.rs  pluralrules.rs
intl-memoizer/src/: concurrent.rs  lib.rs
