[workspace]
members = [
    "fluent-syntax",
    "fluent-bundle",
    "fluent-fallback",
    "fluent-resmgr",
    "fluent-pseudo",
    "fluent-testing",
    "fluent-langneg",
    "fluent",
    "intl-memoizer"
]

exclude = [
    "fluent-cli",
]

[workspace.dependencies]
criterion = "0.3"
futures = "0.3"
iai = "0.1"
rustc-hash = "1"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = "1.0"
icu = "1"

fluent-bundle_for_carbide = { path = "fluent-bundle" }
fluent-fallback_for_carbide = { path = "fluent-fallback" }
fluent-pseudo_for_carbide = { path = "fluent-pseudo" }
fluent-syntax_for_carbide = { path = "fluent-syntax" }
fluent-langneg_for_carbide = { path = "fluent-langneg" }
