[package]
name = "fluent-langneg"
description = """
A library for language and locale negotiation.
"""
version = "0.13.0"
edition = "2021"
authors = [
    "Zibi Braniecki <gandalf@mozilla.com>"
]
homepage = "http://www.projectfluent.org"
license = "Apache-2.0/MIT"
repository = "https://github.com/projectfluent/fluent-rs"
readme = "README.md"
keywords = ["localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]
include = [
	"src/**/*",
	"benches/*.rs",
	"Cargo.toml",
	"README.md",
	"LICENSE-APACHE",
	"LICENSE-MIT"
]

[dependencies]
icu.workspace = true
