[package]
name = "fluent-resmgr_for_carbide"
description = """
Resource manager for Fluent localization resources.
"""
version = "0.0.6"
authors = [
    "Zibi Braniecki <gandalf@mozilla.com>",
    "Staś Małolepszy <stas@mozilla.com>"
]
edition = "2021"
homepage = "http://www.projectfluent.org"
license = "Apache-2.0/MIT"
repository = "https://github.com/projectfluent/fluent-rs"
readme = "README.md"
keywords = ["localization", "l10n", "i18n", "intl", "internationalization"]
categories = ["localization", "internationalization"]

[dependencies]
fluent-bundle_for_carbide.workspace = true
fluent-fallback_for_carbide.workspace = true
futures.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
icu.workspace = true
elsa = "1.5"

[dev-dependencies]
fluent-langneg_for_carbide.workspace = true
icu.workspace = true
